--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
     padding: 0;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-/* Styling colours to be used throughout the portfolio. Different colour additions for backgrounds, fonts, buttons, bold notes for headers etc. are all found here. I chose to use the :root pseudo-class as its specificity is higher than just the html as its specifity is higher, allowing me to future plan this portfolio. I used custom properties because the planning for this was to be slightly more detailed around buttons and different colours for emphasis. */
+
+/* Styling colours to be used throughout the portfolio. Different colour additions for backgrounds, fonts, buttons, bold notes for headers etc. are all found here. I chose to use the :root pseudo-class as its specificity is higher than just the html as its specifity is higher, allowing me to future plan this portfolio. I used custom properties because the planning for this was to be slightly more detailed around buttons and different colours and future planning while creating my portfolio. */
 :root {
     --clr-dark: #070a13;
     --clr-light: #e5e7eb;
@@ -15,40 +16,37 @@
     --clr-button: #e11d48;
 }
 
+.header {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+
+}
+.header__nav {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    gap: 1em;
+}
+
+.header__titles {
+    font-size: small;
+    text-decoration: none;
+    color: var(--clr-light);
+    letter-spacing: -0.025em;
+
+}
+
+.header__titles:hover {
+    color: var(--clr-button);
+    transform: scale(1.2);
+    transition: 0.5s;
+}
 body {
     background-color: var(--clr-dark);
-}
-.hero {
-   height: 100vh;
-   width: 100%;
-   background-repeat: no-repeat;
-   background-size: cover;
-   background-position: center;
-
-}
-
-button {
-    display: inline-block;
-    padding: 0;
-    border: none;
-    background: none;
-    cursor: pointer;
-}
-/* Display for the button, giving it a radial look */
-.btn {
-    display: inline-block;
-    font-weight: 600;
-    padding: 0.5em 1em;
-    border-radius: 6px;
-    letter-spacing: 0.01em;
-    color: var(--clr-light);
-    background-color: var(--clr-button);
-}
-
-h2 {
-    color: var(--clr-light);
-    text-align: center; 
-
+    color: var(--clr-primary);
 }
 
 nav {
@@ -59,23 +57,25 @@ nav {
     padding-top: 2rem;
     padding-bottom: 2rem;
 }
+/* Attempting to add hamburger icon for easy access on mobile devices. Attempts failed. May return to this.
 
+.navbar-container .hamburger-lines .line {
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 10px;
+    background: #333;
+  }
+  .navbar-container .hamburger-lines .line1 {
+    transform-origin: 0% 0%;
+    transition: transform 0.4s ease-in-out;
+  }
 
+  .navbar-container .hamburger-lines .line2 {
+    transition: transform 0.2s ease-in-out;
+  }
 
-
-
-
-
-/* Media Screens below */
-
-@media (min-width: 475px) {}
-
-@media (min-width: 640px) {}
-
-@media (min-width: 768px) {}
-
-@media (min-width: 1024px) {}
-
-@media (min-width: 1280px) {}
-
-@media (min-width: 1536px) {}
+  .navbar-container .hamburger-lines .line3 {
+    transform-origin: 0% 100%;
+    transition: transform 0.4s ease-in-out;
+  } */
