--- a/src/blog.css
+++ b/src/blog.css
@@ -6,6 +6,17 @@ h3, h4 {
     font-size: 40px;
     background-color: var(--clr-bold);
 }
+article {
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    column-gap: 1rem;
+    row-gap: 1rem;
+    justify-content: center;
+    padding: 1rem;
+    text-align: center;
+}
 h4 {
     font-size: 15px;
 }
@@ -32,6 +43,7 @@ a {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    justify-content: center;
 
 }
 
@@ -42,6 +54,6 @@ a {
     min-width: 200px;
     max-width: 200px;
     display: block;
-
-    
+    margin-left: auto;
+    margin-right: auto;
 }
