--- a/src/style.css
+++ b/src/style.css
@@ -44,6 +44,7 @@
     transform: scale(1.2);
     transition: 0.5s;
 }
+/* Styling properties to the body */
 body {
     background-color: var(--clr-dark);
     color: var(--clr-primary);
@@ -66,15 +67,15 @@ nav {
     padding-bottom: 0.5rem;
     padding-right: 0.5rem;
 }
-
+/* Image property changes to be the same size on different screen sizes and circular. */
 .profile {
     width: 25vw;
     height: 25vh;
     border-radius: 50%;
-    min-width: 300px;
-    max-width: 300px;
-    min-height: 300px;
-    max-height: 300px;
+    min-width: 18.75rem;
+    max-width: 18.75rem;
+    min-height: 18.75rem;
+    max-height: 18.75rem;
 }
 .title {
     text-align: center;
@@ -85,6 +86,7 @@ footer {
     align-content: space-evenly;
     text-align: center;
 }
+/* Styling for social icons to be centered on page and same size on all devices. */
 .icon__size {
     max-height: 2rem;
     min-height: 1rem;
